Remove java10 gradle package
Change-Id: Iaf27de61eb64531c2a402c8fe4ca623b215caa4d