@@ -2,22 +2,20 @@
 // for details. All rights reserved. Use of this source code is governed by a
 // BSD-style license that can be found in the LICENSE file.
 
-package backport;
+package com.android.tools.r8.jdk10.backport;
 
 import com.android.tools.r8.TestParameters;
 import com.android.tools.r8.TestRuntime.CfVm;
 import com.android.tools.r8.desugar.backports.AbstractBackportTest;
 import com.android.tools.r8.utils.AndroidApiLevel;
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 import org.junit.runners.Parameterized.Parameters;
 
 @RunWith(Parameterized.class)
-public class SetBackportJava10Test extends AbstractBackportTest {
+public class ListBackportJava10Test extends AbstractBackportTest {
   @Parameters(name = "{0}")
   public static Iterable<?> data() {
     return getTestParameters()
@@ -27,23 +25,22 @@ public class SetBackportJava10Test extends AbstractBackportTest {
         .build();
   }
 
-  public SetBackportJava10Test(TestParameters parameters) {
-    super(parameters, Set.class, SetBackportJava10Main.class);
+  public ListBackportJava10Test(TestParameters parameters) {
+    super(parameters, List.class, ListBackportJava10Main.class);
     // Note: None of the methods in this test exist in the latest android.jar. If/when they ship in
-    // an actual API level, migrate these tests to SetBackportTest.
+    // an actual API level, migrate these tests to ListBackportTest.
 
-    // Available since API 1 and used to test created sets.
+    // Available since API 1 and used to test created lists.
     ignoreInvokes("add");
-    ignoreInvokes("contains");
+    ignoreInvokes("get");
+    ignoreInvokes("set");
     ignoreInvokes("size");
 
-    // Set.of added in API 30
-    registerTarget(AndroidApiLevel.R, 1);
-    // Set.copyOf added in API 31
-    registerTarget(AndroidApiLevel.S, 5);
+    // List.copyOf added in API 31.
+    registerTarget(AndroidApiLevel.S, 3);
   }
 
-  public static class SetBackportJava10Main {
+  public static class ListBackportJava10Main {
 
     public static void main(String[] args) {
       testCopyOf();
@@ -53,50 +50,45 @@ public class SetBackportJava10Test extends AbstractBackportTest {
       Object anObject0 = new Object();
       Object anObject1 = new Object();
       List<Object> original = Arrays.asList(anObject0, anObject1);
-      Set<Object> copy = Set.copyOf(original);
+      List<Object> copy = List.copyOf(original);
       assertEquals(2, copy.size());
-      assertEquals(new HashSet<>(original), copy);
-      assertTrue(copy.contains(anObject0));
-      assertTrue(copy.contains(anObject1));
+      assertEquals(original, copy);
+      assertSame(anObject0, copy.get(0));
+      assertSame(anObject1, copy.get(1));
       assertMutationNotAllowed(copy);
 
       // Mutate the original backing collection and ensure it's not reflected in copy.
-      Object newObject = new Object();
-      original.set(0, newObject);
-      assertFalse(copy.contains(newObject));
-
-      // Ensure duplicates are allowed and are de-duped.
-      assertEquals(Set.of(1, 2), Set.copyOf(List.of(1, 2, 1, 2)));
+      original.set(0, new Object());
+      assertSame(anObject0, copy.get(0));
 
       try {
-        Set.copyOf(null);
+        List.copyOf(null);
         throw new AssertionError();
       } catch (NullPointerException expected) {
       }
       try {
-        Set.copyOf(Arrays.asList(1, null, 2));
+        List.copyOf(Arrays.asList(1, null, 2));
         throw new AssertionError();
       } catch (NullPointerException expected) {
       }
     }
 
-    private static void assertMutationNotAllowed(Set<Object> ofObject) {
+    private static void assertMutationNotAllowed(List<Object> ofObject) {
       try {
         ofObject.add(new Object());
         throw new AssertionError();
       } catch (UnsupportedOperationException expected) {
       }
-    }
-
-    private static void assertTrue(boolean value) {
-      if (!value) {
-        throw new AssertionError("Expected <true> but was <false>");
+      try {
+        ofObject.set(0, new Object());
+        throw new AssertionError();
+      } catch (UnsupportedOperationException expected) {
       }
     }
 
-    private static void assertFalse(boolean value) {
-      if (value) {
-        throw new AssertionError("Expected <false> but was <true>");
+    private static void assertSame(Object expected, Object actual) {
+      if (expected != actual) {
+        throw new AssertionError("Expected <" + expected + "> but was <" + actual + ">");
       }
     }
 
